--- a/game.html
+++ b/game.html
@@ -79,9 +79,13 @@
 
 
         <!--ゲーム紹介-->
+        
     <div class="game-section">
         <h2>原神 (Genshin Impact)</h2>
-        <img src="images/gen.jpg" alt="原神">
+        <p class="resizeimage">
+        <img src="images/gen.jpg" class="bigimage" alt="原神">
+        <img src="images/paimon.jpg" class="miniimage" alt="原神">
+        </p>
         <p>
             原神は、HoYoverseが開発したオープンワールドRPGです。<br>
             プレイヤーは「旅人」として、広大な世界「テイワット」を探索し、<br>
@@ -92,7 +96,11 @@
 
     <div class="game-section">
         <h2>崩壊スターレイル (Honkai: Star Rail)</h2>
-        <img src="images/sutare.jpg" alt="崩壊スターレイル">
+        <p class="resizeimage">
+            <img src="images/sutare.jpg" class="bigimage" alt="崩壊スターレイル">
+            <img src="images/nano.jpg" class="miniimage" alt="スタレ">
+            </p>
+
         <p>
             崩壊スターレイルは、宇宙を舞台としたターン制バトルRPGです。<br>
             プレイヤーは様々なキャラクターを操り、宇宙を旅しながら謎を解き明かし、<br>
@@ -103,7 +111,10 @@
 
     <div class="game-section">
         <h2>ゼンレスゾーンゼロ (Zenless Zone Zero)</h2>
-        <img src="images/zennzero.jpg" alt="ゼンレスゾーンゼロ">
+        <p class="resizeimage">
+        <img src="images/zennzero.jpg" class="bigimage" alt="ゼンレスゾーンゼロ">
+        <img src="images/anbi-.jpg" class="miniimage" alt="スタレ">
+        </p>
         <p>
             ゼンレスゾーンゼロは、近未来都市を舞台としたアクションRPGです。<br>
             プレイヤーは個性的なキャラクターを操作し、都市で発生する異常事態を解決しながら、<br>
