--- a/nizi.html
+++ b/nizi.html
@@ -79,9 +79,13 @@
             <!--メンバー紹介-->
         <div class="YouTube">
             <h2>エデン組</h2>
-            <img src="images/eden.jpg" alt="エデン組">
+            <p class="resizeimage">
+            <img src="images/eden.jpg" class="bigimage" alt="エデン組">
+            <img src="images/edejpg.jpg" class="miniimage" alt="エデン組">
+            </p>
             <p>
-                2021年7月にデビューした、にじさんじ所属のバーチャルライバー5人「アクシア・クローネ」「ローレン・イロアス」「レオス・ヴィンセント」「オリバー・エバンス」「レイン・パターソン」の総称。<br>
+                2021年7月にデビューした、にじさんじ所属のバーチャルライバー5人<br>
+                「アクシア・クローネ」「ローレン・イロアス」「レオス・ヴィンセント」「オリバー・エバンス」「レイン・パターソン」の総称。<br>
                 同期5人におけるコラボ配信などで支障が出ないよう、考案されたユニット・グループ名である。<br>
                  ユニット・グループ名は彼らの活動拠点になっている都市「エデン」から拝借したものであり、<br>
                  Twitterプロフィールに記載されている5人の位置情報(住所)も全員「エデン」関連の地名に統一している。
@@ -91,7 +95,12 @@
     
         <div class="YouTube">
             <h2>VOLTACTION</h2>
-            <img src="images/voruta.jpg" alt="ヴォルタクション">
+
+            <p class="resizeimage">
+                
+            <img src="images/voruta.jpg" class="bigimage" alt="ヴォルタクション">
+            <img src="images/kana.jpg" class="miniimage" alt="ヴォルタクション">
+        </p>
             <p>
                 寄宿学校でいつもつるんでいた「風楽奏斗」「渡会雲雀」「四季凪アキラ」「セラフ・ダズルガーデン」の4人で結成したユニット。<br>
                 裏社会を通じて磨いてきた特殊な能力を人々の日常を幸せにするために活かす、という共通の思想のもとで日々暗躍している。<br>
