--- a/game.html
+++ b/game.html
@@ -30,6 +30,7 @@
                     }
                     </style>
                     <img src="images/game.jpg" alt="game" class="image">
+
         <!--ヘッダー-->
         <header class="page-header">
             <nav>
@@ -110,7 +111,7 @@
         <h2>ゼンレスゾーンゼロ (Zenless Zone Zero)</h2>
         <p class="resizeimage">
         <img src="images/zennzero.jpg" class="bigimage" alt="ゼンレスゾーンゼロ">
-        <img src="images/anbi-.jpg" class="miniimage" alt="スタレ">
+        <img src="images/anbi-.jpg" class="miniimage" alt="ゼンゼロ">
         </p>
         <p>
             ゼンレスゾーンゼロは、近未来都市を舞台としたアクションRPGです。<br>
