--- a/nizi.html
+++ b/nizi.html
@@ -134,7 +134,8 @@
         <div class="grid-1">
             <div class="item">
                 <img src="images/mennba/kanato.jpg" alt="kanato"></a>
-                <h2>風楽奏斗</h2>
+                <h2>風楽奏斗
+                </h2>
             </div>
             <div class="item">
                 <img src="images/mennba/hiba.jpg" alt="hiba"></a>
@@ -142,11 +143,15 @@
             </div>
             <div class="item">
                 <img src="images/mennba/akira.jpg" alt="akira"></a>
-                <h2>四季凪アキラ</h2>
+                <h2>四季凪アキラ<br>
+                    <br>
+                </h2>
             </div>
             <div class="item">
                 <img src="images/mennba/sera.jpg" alt="serahu"></a>
-                <h2>セラフ・ダズルガーデン</h2>
+                <h2>セラフ・ダズルガーデン<br>
+                    <br>
+                </h2>
             </div>
         </div>
     
