--- a/game.html
+++ b/game.html
@@ -124,21 +124,21 @@
     <div class="game-kousiki">
         <div>
         <h2>原神公式YouTubeチャンネル</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/bVCrY9Xg0Tg?si=ygm3wXWqn0sban6P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="80%" height="400" src="https://www.youtube.com/embed/bVCrY9Xg0Tg?si=ygm3wXWqn0sban6P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div></div>
 
 
     <div class="game-kousiki">
         <div>
         <h2>崩壊スターレイル公式Youtubeチャンネル</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/tL2NguNdfMU?si=IcwYi5jqoOIG-O7P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="80%" height="400" src="https://www.youtube.com/embed/tL2NguNdfMU?si=IcwYi5jqoOIG-O7P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div></div>
 
 
     <div class="game-kousiki">
         <div>
         <h2>ゼンレスゾーンゼロ公式YouTubeチャンネル</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/zLZcEIHBX38?si=hBF2xbA72kwyh9BQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="80%" height="400" src="https://www.youtube.com/embed/zLZcEIHBX38?si=hBF2xbA72kwyh9BQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div></div>
 
 
